--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "serve-favicon": "^2.5.0"
+    "http": "0.0.0",
+    "serve-favicon": "^2.5.0",
+    "ws": "^5.1.1"
   },
   "author": "Mathew Schlichting",
   "contributors": [
