--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "^4.16.3",
     "http": "0.0.0",
     "serve-favicon": "^2.5.0",
-    "ws": "^5.1.1"
+    "ws": "^5.1.1",
+    "adapterjs": "0.15.0"
   },
   "author": "Mathew Schlichting",
   "contributors": [
