Examples that work elsewhere but not on our page.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "contributors": [
     {
       "name": "Mathew Schlichting",
-      "email": "schlichting@stthoams.edu"
+      "email": "schlichting@stthomas.edu"
     },
     {
       "name": "partner",
