--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http": "0.0.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.1.0",
+    "ui-router": "^1.0.0-alpha.3",
     "ws": "^5.1.1"
   },
   "author": "Mathew Schlichting",
