--- a/package.json
+++ b/package.json
@@ -7,15 +7,10 @@
     "url": "todo"
   },
   "dependencies": {
-    "adapterjs": "0.15.0",
-    "angular-sanitize": "^1.6.10",
-    "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "http": "0.0.0",
+    "https": "^1.0.0",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^2.1.0",
-    "ui-router": "^1.0.0-alpha.3",
-    "ws": "^5.1.1"
+    "socket.io": "^2.1.0"
   },
   "author": "Mathew Schlichting",
   "contributors": [
